--- a/index.html
+++ b/index.html
@@ -1,39 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-
-  <body>
-    <canvas id="canvas" width="1024" height="1024">
-    </canvas>
-
-    <script type="text/javascript" src="delaunay.js"></script>
-    <script type="text/javascript">
-      var canvas = document.getElementById("canvas"),
-          ctx = canvas.getContext("2d"),
-          i = 2048,
-          vertices = new Array(i),
-          x, y
-
-      while(i) {
-        do {
-          x = Math.random() - 0.5
-          y = Math.random() - 0.5
-        } while(x * x + y * y > 0.25)
-
-        x = (x * 0.96875 + 0.5) * canvas.width
-        y = (y * 0.96875 + 0.5) * canvas.height
-
-        vertices[--i] = {x: x, y: y}
-      }
-
-      console.time("triangulate")
-      var triangles = triangulate(vertices)
-      console.timeEnd("triangulate")
-
-      i = triangles.length
-      while(i)
-        triangles[--i].draw(ctx)
-    </script>
-  </body>
+<head>
+<script src="js/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="js/Delaunay.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	var d = new Delaunay($("#delaunay")[0]);
+	d.generateRandomVertices(2048);
+	d.triangulate();
+	d.render();
+});
+</script>
+<style>
+	div#delaunay { position:absolute; top:10px; right:10px; bottom:10px; left:10px; border:1px solid #F00; }
+</style>
+</head>
+<body>
+<div id="delaunay"></div>
+</body>
 </html>
